--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.24.0",
+    "cors": "^2.8.5",
+    "cros": "^1.0.1",
+    "dotenv": "^11.0.0",
+    "express": "^4.17.2",
     "mongoose": "^6.1.5",
-    "prompt-sync": "^4.1.6"
+    "node-fetch": "^3.1.1",
+    "png-to-jpeg": "^1.0.1",
+    "prompt-sync": "^4.1.6",
+    "supertest": "^6.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^9.1.3",
+    "mocha": "^9.1.4",
     "nodemon": "^2.0.15"
   }
 }
